More model code. Hyperlinks on function calls and imports now work. had to pull interpreter editor from PydevDebug plugin into this one since we needed interpreter locaiton for include paths.
Model got extensive changes. Scopes are now used in the code.
General code cleanup everywehre.
Added findFunctionDefinition functionality with hyperlinks
Added the ability to open external files (for external hyperlinks)


git-svn-id: svn://localhost/trunk@55 7f4d9e04-a92a-ab41-bea9-970b690ef4a7